01/04/07 (frmky)
  * More changes to montgomery_sqrt.c to eliminate another floating
    point overflow.  This does not address the concern noted below.

12/24/06 (frmky)
  * Removed -ffast-math since it seems to be triggering a bug in sqrt.
  * Incorporated patch from Tom Wu to prevent an overflow in sqrt.
    He notes that a possible overflow condition still exists in 
    computeDelta().  It is possible for the code that finds the lowest 
    weight column to get a floating point overflow.

07/27/06 (asl)
  * Matrix save interval is now 300 seconds by default.

07/23/06 (asl)
  * Minor dead code cleanup from procrels.
  * Added SQUFOF for relations factoring. Got 2x speedup for short
    format.

07/23/06 (asl)
  * Sten probably forget to add, that there is new "short" relation
    format suported. It can reduce bandwidth, if you're transfering
    somehow. Sievers now accepts "-s" switch. Procrels determine the
    actual format automaticaly, but there is also "-s" switch there
    to force usign short format for dumping & pruning.
    Please note, that relation processing time is somehow 30x more
    for short format comparing to usually one. You've been warned! :)
  
07/22/06 (asl)
  * Separated matrix pruning into separate program.
  * factLat.pl was changed in order to track changes in flow.
  * Added smart adjustment of maxRelsInFF: if supplied value is
    zero, program will select it as small as possible.
  * Set default for maxRelsInFF for factLat.pl to zero.

07/21/06 (relf)
  * GGNFS_VERBOSE introduced (on by default)
  * some auxiliary output in rels.c wrapped with #ifdef GGNFS_VERBOSE .. #endif

07/07/06 (relf)
  * minor enhacements
  * forzles' patch http://groups.yahoo.com/group/ggnfs/message/1894 applied

6/10/06 (asl)
  * Fix for PPC by Mark Rodenkirch
  * Added -nolpcount command line switch (by forzles)
  * Bugfix for M->maxDataSize was not setup correctly (by forzles)

6/9/06 (asl)
  * Incorporated Cygwin compatibility fix by R. Backstrom